--- a/app/src/main/res/layout/topic_select_fragment.xml
+++ b/app/src/main/res/layout/topic_select_fragment.xml
@@ -29,7 +29,7 @@
             app:layout_constraintBottom_toTopOf="@+id/practice_start_button"
             android:layout_marginBottom="15dp"
             android:textAlignment="center"
-            android:id="@+id/practice_title" app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
+            android:id="@+id/practice_title" />
         <!--app:fontFamily="@font/Karla-Regular"-->
 
 
