--- a/app/src/main/res/layout/question_activity_main.xml
+++ b/app/src/main/res/layout/question_activity_main.xml
@@ -67,6 +67,8 @@
                 android:textSize="25sp"
                 android:scrollHorizontally="false"
                 android:layout_weight="0.5"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMaxTextSize="25sp"
                 fbutton:fontFamily="@font/karla"
                 fbutton:layout_constraintBottom_toBottomOf="parent"
                 fbutton:layout_constraintRight_toRightOf="parent"
