--- a/app/src/main/res/layout/setup_activity_main.xml
+++ b/app/src/main/res/layout/setup_activity_main.xml
@@ -81,7 +81,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/setup_grade_select_text"
+        android:text="@string/sign_In_Google"
         android:textColor="#19A0FB"
         android:textSize="28sp"
         app:fontFamily="@font/karla"
