--- a/app/src/main/res/layout/topic_select_fragment.xml
+++ b/app/src/main/res/layout/topic_select_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,128 +17,144 @@
         android:layout_marginTop="35dp"
         android:textColor="#19A0FB"
         android:textSize="40sp"/>
-        <!--app:fontFamily="@font/Karla-Regular"-->
+    <!--app:fontFamily="@font/Karla-Regular"-->
+
+    <!--app:fontFamily="@font/Karla-Regular"-->
+
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:text="Rounding Numbers"
-            android:textSize="35sp"
-            android:textColor="#000"
-            app:layout_constraintBottom_toTopOf="@+id/practice_start_button"
-            android:layout_marginBottom="15dp"
-            android:textAlignment="center"
-            android:id="@+id/practice_title" />
-        <!--app:fontFamily="@font/Karla-Regular"-->
-
+        android:id="@+id/practice_title"
+        android:layout_width="wrap_content"
+        android:layout_height="47dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="Rounding Numbers"
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toTopOf="@+id/practice_start_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="180dp"
+        android:id="@+id/image_view_constraint_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/image_view_constraint_layout">
+        android:layout_height="216dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        fbutton:layout_constraintBottom_toTopOf="@+id/constraintLayout">
+
         <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="100dp"
-            android:contentDescription="Left Button"
-            app:layout_constraintTop_toTopOf="@id/current_practice_ImageView"
-            app:layout_constraintBottom_toBottomOf="@id/current_practice_ImageView"
-            app:layout_constraintRight_toLeftOf="@id/current_practice_ImageView"
-            android:layout_marginRight="27dp"
             android:id="@+id/topic_left_ImageButton"
-            android:src="@drawable/ic_topicselect_imagebutton_left"
-            />
-
-        <ImageButton
             android:layout_width="50dp"
             android:layout_height="100dp"
-            android:contentDescription="Right Button"
-            app:layout_constraintTop_toTopOf="@id/current_practice_ImageView"
+            android:layout_marginRight="27dp"
+            android:contentDescription="Left Button"
+            android:src="@drawable/ic_topicselect_imagebutton_left"
             app:layout_constraintBottom_toBottomOf="@id/current_practice_ImageView"
-            app:layout_constraintLeft_toRightOf="@id/current_practice_ImageView"
-            android:layout_marginLeft="27dp"
-            android:id="@+id/topic_right_ImageButton"
-            android:src="@drawable/ic_topicselect_imagebutton_right"/>
-
-        <ImageView
-            android:contentDescription="Left ImageView"
-            android:layout_width="190dp"
-            android:layout_height="150dp"
-            android:id="@+id/left_practice_ImageView"
-            app:layout_constraintBottom_toBottomOf="@id/current_practice_ImageView"
-            app:layout_constraintTop_toTopOf="@id/current_practice_ImageView"
             app:layout_constraintRight_toLeftOf="@id/current_practice_ImageView"
-            android:layout_marginRight="50dp" />
+            app:layout_constraintTop_toTopOf="@id/current_practice_ImageView" />
+
+        <ImageButton
+            android:id="@+id/topic_right_ImageButton"
+            android:layout_width="50dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="27dp"
+            android:contentDescription="Right Button"
+            android:src="@drawable/ic_topicselect_imagebutton_right"
+            app:layout_constraintBottom_toBottomOf="@id/current_practice_ImageView"
+            app:layout_constraintLeft_toRightOf="@id/current_practice_ImageView"
+            app:layout_constraintTop_toTopOf="@id/current_practice_ImageView" />
 
         <ImageView
-            android:contentDescription="Right ImageView"
+            android:id="@+id/left_practice_ImageView"
             android:layout_width="190dp"
             android:layout_height="150dp"
-            android:id="@+id/right_practice_ImageView"
+            android:layout_marginRight="50dp"
+            android:contentDescription="Left ImageView"
             app:layout_constraintBottom_toBottomOf="@id/current_practice_ImageView"
-            app:layout_constraintTop_toTopOf="@id/current_practice_ImageView"
-            app:layout_constraintLeft_toRightOf="@id/current_practice_ImageView"
-            android:layout_marginLeft="50dp"/>
+            app:layout_constraintRight_toLeftOf="@id/current_practice_ImageView"
+            app:layout_constraintTop_toTopOf="@id/current_practice_ImageView" />
 
         <ImageView
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="Current ImageView"
+            android:id="@+id/right_practice_ImageView"
+            android:layout_width="190dp"
+            android:layout_height="150dp"
+            android:layout_marginLeft="50dp"
+            android:contentDescription="Right ImageView"
+            app:layout_constraintBottom_toBottomOf="@id/current_practice_ImageView"
+            app:layout_constraintLeft_toRightOf="@id/current_practice_ImageView"
+            app:layout_constraintTop_toTopOf="@id/current_practice_ImageView" />
+
+        <ImageView
             android:id="@+id/current_practice_ImageView"
             android:layout_width="250dp"
             android:layout_height="200dp"
-            android:layout_marginBottom="100dp"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="Current ImageView"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@id/image_view_constraint_layout">
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/practice_title"
+        app:layout_constraintTop_toBottomOf="@+id/image_view_constraint_layout"
+        app:layout_constraintVertical_bias="0.6">
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="300dp"
             android:layout_height="20dp"
+            android:layout_marginTop="24dp"
             android:progress="30"
             android:progressDrawable="@drawable/round_progress_bar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/progress_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/progress_text"
-            android:textColor="#000"
+            android:layout_marginRight="20dp"
             android:text="18% Mastered"
-            app:layout_constraintTop_toTopOf="@id/progressBar"
+            android:textColor="#000"
             app:layout_constraintBottom_toBottomOf="@id/progressBar"
             app:layout_constraintRight_toRightOf="@id/progressBar"
-            android:layout_marginRight="20dp"/>
+            app:layout_constraintTop_toTopOf="@id/progressBar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-            android:id="@+id/practice_start_button"
-            android:layout_width="250dp"
-            android:layout_height="70dp"
-            android:layout_marginBottom="112dp"
-            android:background="#19A0FB"
-            android:text="Practice"
-            android:textAllCaps="false"
-            android:textColor="#ffffff"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-        <!--app:fontFamily="@font/Karla-Regular"-->
+        android:id="@+id/practice_start_button"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginBottom="112dp"
+        android:background="#19A0FB"
+        android:text="Practice"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/practice_title" />
+
+    <!--app:fontFamily="@font/Karla-Regular"-->
 
 
 
