--- a/app/src/main/res/layout/activity_reading_questions.xml
+++ b/app/src/main/res/layout/activity_reading_questions.xml
@@ -44,44 +44,48 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
 
-    <Button
+    <info.hoang8f.widget.FButton
         android:id="@+id/btnA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:onClick="buttonA"
         android:backgroundTint="@color/blue"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <Button
+    <info.hoang8f.widget.FButton
         android:id="@+id/btnB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:onClick="buttonB"
         android:text="Button"
         android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="@+id/btnA"
         app:layout_constraintStart_toStartOf="@+id/btnA"
         app:layout_constraintTop_toBottomOf="@+id/btnA" />
 
-    <Button
+    <info.hoang8f.widget.FButton
         android:id="@+id/btnC"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:onClick="buttonC"
         android:text="Button"
         android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="@+id/btnB"
         app:layout_constraintStart_toStartOf="@+id/btnB"
         app:layout_constraintTop_toBottomOf="@+id/btnB" />
 
-    <Button
+    <info.hoang8f.widget.FButton
         android:id="@+id/btnD"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:onClick="buttonD"
         android:text="Button"
         android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="@+id/btnC"
