--- a/app/src/main/res/layout/progress_fragment.xml
+++ b/app/src/main/res/layout/progress_fragment.xml
@@ -119,7 +119,7 @@
         android:id="@+id/weeklyTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:padding="10dp"
         android:text="Weekly Progress"
         android:textSize="26dp"
@@ -201,7 +201,7 @@
         android:id="@+id/overallTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:padding="10dp"
         android:text="Overall Statistics"
         android:textSize="26dp"
@@ -282,6 +282,7 @@
         android:id="@+id/achievementsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:layout_weight="1"
         android:importantForAutofill="no"
         android:padding="10dp"
@@ -289,7 +290,6 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/overallTableLayout"
-        android:layout_marginTop="5dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/overallTableLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
