Fixed all of google sign in features, and now we can retrieve email and display name

--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
+    android:id="@+id/settingsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -155,8 +155,7 @@
         app:layout_constraintBottom_toTopOf="@+id/aboutUsCardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notifsTimeBtn"
-        android:onClick="saveSettings"/>
+        app:layout_constraintTop_toBottomOf="@+id/notifsTimeBtn"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/aboutUsCardView"
