--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:onClick="buttonB"
+            android:onClick="seePastProblems"
             android:text="Past Problems"
             android:textColor="@color/white"
             fbutton:buttonColor="@color/blue"/>
